dev7-doga-parser/src/main/java/jp/dev7/enchant/doga/parser/l3c/autogen/L3cParser.java
/* Generated By:JJTree&JavaCC: Do not edit this line. L3cParser.java */
package jp.dev7.enchant.doga.parser.l3c.autogen;
public class L3cParser/*@bgen(jjtree)*/implements L3cParserTreeConstants, L3cParserConstants {/*@bgen(jjtree)*/
  protected JJTL3cParserState jjtree = new JJTL3cParserState();

  final public ASTStart Start() throws ParseException {
 /*@bgen(jjtree) Start */
  ASTStart jjtn000 = new ASTStart(JJTSTART);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      L3c();
            jjtree.closeNodeScope(jjtn000, true);
            jjtc000 = false;
            {if (true) return jjtn000;}
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
    throw new Error("Missing return statement in function");
  }

  final public void L3c() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case FUNC_START:
      OuterStart();
      break;
    case FRAM:
      jj_consume_token(FRAM);
      break;
    default:
      jj_la1[0] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    jj_consume_token(BLOCK_START);
    Env();
    Unit();
    jj_consume_token(BLOCK_END);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case FUNC_END:
      OuterEnd();
      break;
    default:
      jj_la1[1] = jj_gen;
      ;
    }
  }

  final public void OuterStart() throws ParseException {
    jj_consume_token(FUNC_START);
    jj_consume_token(CONNECTION_FUNCNAME);
    jj_consume_token(DATA_START);
    jj_consume_token(POSE);
    jj_consume_token(INDEX_START);
    jj_consume_token(INDEX_END);
    jj_consume_token(COM);
    jj_consume_token(P);
    jj_consume_token(DATA_END);
  }

  final public void OuterEnd() throws ParseException {
    jj_consume_token(FUNC_END);
    jj_consume_token(DATA_START);
    jj_consume_token(DATA_END);
  }

  final public void Env() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case PARAM_START:
      jj_consume_token(PARAM_START);
      break;
    default:
      jj_la1[2] = jj_gen;
      ;
    }
    Light();
    Eye();
    Target();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case PARAM_END:
      jj_consume_token(PARAM_END);
      break;
    default:
      jj_la1[3] = jj_gen;
      ;
    }
  }

  final public void Light() throws ParseException {
    jj_consume_token(LIGHT);
    Func();
  }

  final public void Eye() throws ParseException {
    jj_consume_token(BLOCK_START);
    UnitMov();
    jj_consume_token(EYE);
    Func();
    jj_consume_token(BLOCK_END);
  }

  final public void Target() throws ParseException {
    jj_consume_token(BLOCK_START);
    UnitMov();
    jj_consume_token(TARGET);
    jj_consume_token(BLOCK_END);
  }

  final public void Unit() throws ParseException {
 /*@bgen(jjtree) Unit */
  ASTUnit jjtn000 = new ASTUnit(JJTUNIT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(BLOCK_START);
      Mov();
      Rotz();
      Roty();
      Rotx();
      Obj();
      label_1:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case BLOCK_START:
          ;
          break;
        default:
          jj_la1[4] = jj_gen;
          break label_1;
        }
        Unit();
      }
      jj_consume_token(BLOCK_END);
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  final public void Mov() throws ParseException {
 /*@bgen(jjtree) Mov */
  ASTMov jjtn000 = new ASTMov(JJTMOV);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(MOV);
      jj_consume_token(DATA_START);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PARAM_START:
        jj_consume_token(PARAM_START);
        break;
      default:
        jj_la1[5] = jj_gen;
        ;
      }
      Num();
      Num();
      Num();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PARAM_END:
        jj_consume_token(PARAM_END);
        jj_consume_token(YEN);
        jj_consume_token(DATA_START);
        Num();
        jj_consume_token(PLUS);
        jj_consume_token(POSE);
        jj_consume_token(INDEX_START);
        jj_consume_token(DATA_START);
        jj_consume_token(P);
        jj_consume_token(PLUS);
        Num();
        jj_consume_token(DATA_END);
        jj_consume_token(INDEX_END);
        jj_consume_token(DATA_END);
        jj_consume_token(COM);
        Num();
        jj_consume_token(PLUS);
        jj_consume_token(DATA_START);
        jj_consume_token(POSE);
        jj_consume_token(INDEX_START);
        jj_consume_token(DATA_START);
        jj_consume_token(P);
        jj_consume_token(PLUS);
        Num();
        jj_consume_token(DATA_END);
        jj_consume_token(INDEX_END);
        jj_consume_token(DATA_END);
        jj_consume_token(COM);
        Num();
        jj_consume_token(PLUS);
        jj_consume_token(DATA_START);
        jj_consume_token(POSE);
        jj_consume_token(INDEX_START);
        jj_consume_token(DATA_START);
        jj_consume_token(P);
        jj_consume_token(PLUS);
        Num();
        jj_consume_token(DATA_END);
        jj_consume_token(INDEX_END);
        jj_consume_token(DATA_END);
        jj_consume_token(YEN);
        break;
      default:
        jj_la1[6] = jj_gen;
        ;
      }
      jj_consume_token(DATA_END);
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  final public void Rotz() throws ParseException {
 /*@bgen(jjtree) Rotz */
  ASTRotz jjtn000 = new ASTRotz(JJTROTZ);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(ROTZ);
      jj_consume_token(DATA_START);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PARAM_START:
        jj_consume_token(PARAM_START);
        break;
      default:
        jj_la1[7] = jj_gen;
        ;
      }
      Num();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PARAM_END:
        jj_consume_token(PARAM_END);
        jj_consume_token(YEN);
        jj_consume_token(POSE);
        jj_consume_token(INDEX_START);
        jj_consume_token(DATA_START);
        jj_consume_token(P);
        jj_consume_token(PLUS);
        Num();
        jj_consume_token(DATA_END);
        jj_consume_token(INDEX_END);
        jj_consume_token(YEN);
        break;
      default:
        jj_la1[8] = jj_gen;
        ;
      }
      jj_consume_token(DATA_END);
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  final public void Roty() throws ParseException {
 /*@bgen(jjtree) Roty */
  ASTRoty jjtn000 = new ASTRoty(JJTROTY);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(ROTY);
      jj_consume_token(DATA_START);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PARAM_START:
        jj_consume_token(PARAM_START);
        break;
      default:
        jj_la1[9] = jj_gen;
        ;
      }
      Num();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PARAM_END:
        jj_consume_token(PARAM_END);
        jj_consume_token(YEN);
        jj_consume_token(POSE);
        jj_consume_token(INDEX_START);
        jj_consume_token(DATA_START);
        jj_consume_token(P);
        jj_consume_token(PLUS);
        Num();
        jj_consume_token(DATA_END);
        jj_consume_token(INDEX_END);
        jj_consume_token(YEN);
        break;
      default:
        jj_la1[10] = jj_gen;
        ;
      }
      jj_consume_token(DATA_END);
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  final public void Rotx() throws ParseException {
 /*@bgen(jjtree) Rotx */
  ASTRotx jjtn000 = new ASTRotx(JJTROTX);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(ROTX);
      jj_consume_token(DATA_START);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PARAM_START:
        jj_consume_token(PARAM_START);
        break;
      default:
        jj_la1[11] = jj_gen;
        ;
      }
      Num();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PARAM_END:
        jj_consume_token(PARAM_END);
        jj_consume_token(YEN);
        jj_consume_token(POSE);
        jj_consume_token(INDEX_START);
        jj_consume_token(DATA_START);
        jj_consume_token(P);
        jj_consume_token(PLUS);
        Num();
        jj_consume_token(DATA_END);
        jj_consume_token(INDEX_END);
        jj_consume_token(YEN);
        break;
      default:
        jj_la1[12] = jj_gen;
        ;
      }
      jj_consume_token(DATA_END);
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  final public void Obj() throws ParseException {
 /*@bgen(jjtree) Obj */
  ASTObj jjtn000 = new ASTObj(JJTOBJ);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(BLOCK_START);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SCAL:
        Scal();
        break;
      default:
        jj_la1[13] = jj_gen;
        ;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case MOV:
        UnitMov();
        break;
      default:
        jj_la1[14] = jj_gen;
        ;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case OBJ:
        jjtn000.nodeValue = NormalObj();
        break;
      case PARAM_START:
        jjtn000.nodeValue = SelectiveObj();
        break;
      default:
        jj_la1[15] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(BLOCK_END);
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  final public String NormalObj() throws ParseException {
    String result;
    jj_consume_token(OBJ);
    result = Name();
    jj_consume_token(PARAM_START);
    FileName();
    jj_consume_token(PARAM_END);
            {if (true) return result;}
    throw new Error("Missing return statement in function");
  }

  final public String SelectiveObj() throws ParseException {
    String result;
    jj_consume_token(PARAM_START);
    jj_consume_token(SELECTIVE);
    jj_consume_token(PARAM_END);
    SelectiveIf();
    jj_consume_token(OBJ);
    result = Name();
    jj_consume_token(PARAM_START);
    FileName();
    jj_consume_token(PARAM_END);
    SelectiveEndIf();
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SELECTIVEIF:
        ;
        break;
      default:
        jj_la1[16] = jj_gen;
        break label_2;
      }
      SelectiveIf();
      jj_consume_token(OBJ);
      Name();
      jj_consume_token(PARAM_START);
      FileName();
      jj_consume_token(PARAM_END);
      SelectiveEndIf();
    }
    jj_consume_token(PARAM_START);
    jj_consume_token(SELECTIVE);
    jj_consume_token(DONE);
    jj_consume_token(PARAM_END);
            {if (true) return result;}
    throw new Error("Missing return statement in function");
  }

  final public void SelectiveIf() throws ParseException {
    jj_consume_token(SELECTIVEIF);
    jj_consume_token(DATA_START);
    jj_consume_token(POSE);
    jj_consume_token(INDEX_START);
    jj_consume_token(DATA_START);
    jj_consume_token(P);
    jj_consume_token(PLUS);
    Num();
    jj_consume_token(DATA_END);
    jj_consume_token(INDEX_END);
    jj_consume_token(EQUAL);
    Num();
    jj_consume_token(DATA_END);
  }

  final public void SelectiveEndIf() throws ParseException {
    jj_consume_token(SELECTIVEENDIF);
  }

  final public void Scal() throws ParseException {
 /*@bgen(jjtree) Scal */
  ASTScal jjtn000 = new ASTScal(JJTSCAL);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(SCAL);
      jj_consume_token(DATA_START);
      Num();
      Num();
      Num();
      jj_consume_token(DATA_END);
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  final public void UnitMov() throws ParseException {
 /*@bgen(jjtree) UnitMov */
  ASTUnitMov jjtn000 = new ASTUnitMov(JJTUNITMOV);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(MOV);
      jj_consume_token(DATA_START);
      Num();
      Num();
      Num();
      jj_consume_token(DATA_END);
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  final public void Func() throws ParseException {
 /*@bgen(jjtree) Func */
  ASTFunc jjtn000 = new ASTFunc(JJTFUNC);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(FUNCNAME);
      jj_consume_token(DATA_START);
      label_3:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case FUNCNAME:
        case DQ:
        case NUM:
          ;
          break;
        default:
          jj_la1[17] = jj_gen;
          break label_3;
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case NUM:
          Num();
          break;
        case DQ:
          Text();
          break;
        case FUNCNAME:
          Func();
          break;
        default:
          jj_la1[18] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
      jj_consume_token(DATA_END);
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  final public String Num() throws ParseException {
 /*@bgen(jjtree) Num */
    ASTNum jjtn000 = new ASTNum(JJTNUM);
    boolean jjtc000 = true;
    jjtree.openNodeScope(jjtn000);Token t;
    try {
      t = jj_consume_token(NUM);
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
            jjtn000.nodeValue = t.image;
            {if (true) return jjtn000.nodeValue;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
    throw new Error("Missing return statement in function");
  }

  final public String Text() throws ParseException {
 /*@bgen(jjtree) Text */
    ASTText jjtn000 = new ASTText(JJTTEXT);
    boolean jjtc000 = true;
    jjtree.openNodeScope(jjtn000);Token t;
    try {
      jj_consume_token(DQ);
      t = jj_consume_token(NAME);
      jj_consume_token(DQ);
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
            jjtn000.nodeValue = t.image;
            {if (true) return jjtn000.nodeValue;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
    throw new Error("Missing return statement in function");
  }

  final public String Name() throws ParseException {
    Token t;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case DQ:
      jj_consume_token(DQ);
      break;
    default:
      jj_la1[19] = jj_gen;
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NAME:
      t = jj_consume_token(NAME);
      break;
    case NUMNAME:
      t = jj_consume_token(NUMNAME);
      break;
    default:
      jj_la1[20] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case DQ:
      jj_consume_token(DQ);
      break;
    default:
      jj_la1[21] = jj_gen;
      ;
    }
        {if (true) return t.image;}
    throw new Error("Missing return statement in function");
  }

  final public String FileName() throws ParseException {
 /*@bgen(jjtree) FileName */
    ASTFileName jjtn000 = new ASTFileName(JJTFILENAME);
    boolean jjtc000 = true;
    jjtree.openNodeScope(jjtn000);Token t;
    String s = "";
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case DQ:
        jj_consume_token(DQ);
        break;
      default:
        jj_la1[22] = jj_gen;
        ;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case NAME:
        t = jj_consume_token(NAME);
                                 s += t.image;
        break;
      case NUMNAME:
        t = jj_consume_token(NUMNAME);
                                    s += t.image;
        break;
      default:
        jj_la1[23] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      label_4:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case YEN:
          ;
          break;
        default:
          jj_la1[24] = jj_gen;
          break label_4;
        }
        t = jj_consume_token(YEN);
                        s += t.image;
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case NAME:
          t = jj_consume_token(NAME);
                                 s += t.image;
          break;
        case NUMNAME:
          t = jj_consume_token(NUMNAME);
                                    s += t.image;
          break;
        default:
          jj_la1[25] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case DQ:
        jj_consume_token(DQ);
        break;
      default:
        jj_la1[26] = jj_gen;
        ;
      }
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
        jjtn000.nodeValue = s;
        {if (true) return s;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
    throw new Error("Missing return statement in function");
  }

  /** Generated Token Manager. */
  public L3cParserTokenManager token_source;
  SimpleCharStream jj_input_stream;
  /** Current token. */
  public Token token;
  /** Next token. */
  public Token jj_nt;
  private int jj_ntk;
  private int jj_gen;
  final private int[] jj_la1 = new int[27];
  static private int[] jj_la1_0;
  static private int[] jj_la1_1;
  static {
      jj_la1_init_0();
      jj_la1_init_1();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {0x100,0x0,0x10000000,0x20000000,0x4000000,0x10000000,0x20000000,0x10000000,0x20000000,0x10000000,0x20000000,0x10000000,0x20000000,0x8000,0x200,0x10010000,0x400000,0x1000000,0x1000000,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,};
   }
   private static void jj_la1_init_1() {
      jj_la1_1 = new int[] {0x40,0x100,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x204,0x204,0x4,0xc00,0x4,0x4,0xc00,0x8,0xc00,0x4,};
   }

  /** Constructor with InputStream. */
  public L3cParser(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public L3cParser(java.io.InputStream stream, String encoding) {
    try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new L3cParserTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 27; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream) {
     ReInit(stream, null);
  }
  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream, String encoding) {
    try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jjtree.reset();
    jj_gen = 0;
    for (int i = 0; i < 27; i++) jj_la1[i] = -1;
  }

  /** Constructor. */
  public L3cParser(java.io.Reader stream) {
    jj_input_stream = new SimpleCharStream(stream, 1, 1);
    token_source = new L3cParserTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 27; i++) jj_la1[i] = -1;
  }
